@@ -64,7 +64,7 @@
 		<br>
 		<h2><span data-i18n="Devices">Devices</span>:</h2>
 		<br>
-		<table class="display" id="devicestable" border="0" cellpadding="0" cellspacing="0" width="100%">
+		<table class="display" id="scenedevicestable" border="0" cellpadding="0" cellspacing="0" width="100%">
 				<thead>
 						<tr valign="middle">
 								<th align="left" data-i18n="Name">Name</th>
